--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,12 +1,33 @@
 @import './variables.scss';
 
-#app {
+body {
   font-family: $default-font;
   font-size: 62.5%;
-  color: red;
-  background: pink;
 }
 
-p {
-  background: #000;
+h1,h2,h3,h4 {
+  font-family: $highlight-font;
+}
+
+h1 {
+  font-size: 1.4rem;
+}
+
+h2 {
+  font-size: 1.3rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+
+h4 {
+  font-size: 1.1rem;
+}
+
+a {
+  color: $active-element;
+  &:after {
+    content: '\2192';
+  }
 }
