--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 $default-font: 'EB Garamond', sans-serif;
 $highlight-font: 'Sunflower', serif;
 
+$bright: #fff;
 $dark: #000;
 $active-element: rgb(34, 183, 229);
 $text: #2c2c2c;
